--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
         "cpp": "g++ $fileName -o build/$fileNameWithoutExt && ./build/$fileNameWithoutExt",
     },
     "files.associations": {
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp"
     }
 }
 
